hphp/test/zend/good/Zend/tests/traits/error_013.php.expectf
Fatal error: Trait use aliases cannot be declared static in %s/error_013.php on line 8
